[tool.poetry]
name = "reporting-tools"
version = "0.1.0"
description = "specialized custom reporting tools built in streamlit"
authors = ["Michael Genson <71845777+michael-genson@users.noreply.github.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
xlrd = "^2.0.1"
lxml = "^4.9.1"
python-dateutil = "^2.8.2"
streamlit = "^1.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
openpyxl-stubs = "^0.1.21"
pandas-stubs = "<1.4"
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
