[tool.poetry]
name = "reporting-tools"
version = "0.1.0"
description = "specialized custom reporting tools built in streamlit"
authors = ["Michael Genson <71845777+michael-genson@users.noreply.github.com>"]
license = "GNU"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
lxml = "^5.3.0"
python-dateutil = "^2.9.0.post0"
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
